# OpenAgent-Terminal

./: .clippy.toml  .env.example  .eslintrc.json  .gitattributes  .gitignore  .lychee.toml  .mailmap  .pre-commit-config.yaml  AI_INTEGRATION_COMPLETE.md  ANALYSIS_SESSION_2025-10-04.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_IPC_ROBUSTNESS.md  CHANGELOG_RESIZE_CONTEXT.md  CHANGELOG_TERMINAL_UX.md  CODE_ANALYSIS_BUG_REPORT_2025-10-04.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_SUGGESTION.md  COMPARISON_ANALYSIS.md  COMPLETION_PLAN.md  CONFIG_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPER_WORKFLOW_IMPLEMENTATION.md  DEVELOPMENT_PLAN.md  ERROR_HANDLING_COMPLETE.md  FEATURE_ROADMAP.md  FINAL_SESSION_SUMMARY.md  FIXES_SUMMARY.md  FIX_6_COMPLETE.md  FIX_6_SUMMARY.md  FIX_SUMMARY.md  FORWARD_PLAN_2025.md  GETTING_STARTED.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  INCOMPLETE_FEATURES_REPORT.md  INPUT_HANDLING_FIX.md  (+98 more)
ai_demo/: Cargo.toml  README.md
ai_demo/src/: analysis.rs  lib.rs  main.rs  providers.rs  security.rs  types.rs
ai_demo/tests/: security_tests.rs
crates/openagent-terminal-ide/: Cargo.toml  README.md
crates/openagent-terminal-ide-dap/: Cargo.toml
crates/openagent-terminal-ide-dap/src/: lib.rs
crates/openagent-terminal-ide-editor/: Cargo.toml
crates/openagent-terminal-ide-editor/src/: lib.rs
crates/openagent-terminal-ide-indexer/: Cargo.toml
crates/openagent-terminal-ide-indexer/src/: lib.rs
crates/openagent-terminal-ide-lsp/: Cargo.toml
crates/openagent-terminal-ide-lsp/src/: bridge.rs  lib.rs
crates/openagent-terminal-ide/src/: dap.rs  gtk4_ui.rs  indexer.rs  lib.rs  lsp.rs  web_editors.rs
crates/openagent-terminal-migrate/: Cargo.toml
crates/openagent-terminal-snippets/: Cargo.toml
crates/openagent-terminal-themes/: Cargo.toml
crates/openagent-terminal-utils/: Cargo.toml  README.md
crates/openagent-terminal-web-editors/: Cargo.toml
crates/plugin-loader/: Cargo.toml
crates/plugin-loader/src/: lib.rs  (+1 more)
crates/plugin-runtime/: Cargo.toml  README.md
crates/plugin-sdk/: Cargo.toml  README.md
crates/plugin-system/: Cargo.toml  README.md
crates/workflow-engine/: Cargo.toml  README.md
openagent-terminal/: AI_TERMINAL_INTEGRATION.md  Cargo.toml  build.rs  warp-config-example.toml
openagent-terminal-ai/: Cargo.toml  README.md  build.rs
openagent-terminal-ai/docs/: agent-scaffolds.md
openagent-terminal-ai/examples/: async_streaming_example.rs
openagent-terminal-ai/src/: context.rs  error.rs  lib.rs  privacy.rs  streaming.rs
openagent-terminal-ai/tests/: hub_tasks.rs  integration_agents.rs  integration_test.rs  negative.rs  privacy_proptest.proptest-regressions  privacy_proptest.rs  stream_backpressure.rs  streaming_httpmock.rs  test_anthropic_provider.rs  test_openai_provider.rs  unit_tests.rs
openagent-terminal-config/: Cargo.toml  README.md
openagent-terminal-config/src/: lib.rs
openagent-terminal-core/: Cargo.toml  README.md
openagent-terminal-core/src/: async_utils.rs  event.rs  event_loop.rs  lib.rs  logging.rs  selection.rs  sync.rs  vi_mode.rs
openagent-terminal-core/tests/: event_loop_extended.rs  ref.rs  regex_search.rs  regex_search_bounds.rs  term_damage.rs  windows_pty_repro.rs
openagent-terminal-sync/: Cargo.toml  README.md
openagent-terminal-sync/src/: lib.rs  local_fs.rs  secure_sync.rs
openagent-terminal/benches/: ai_agents.rs  compliance_report.rs  core_performance.rs  render_performance.rs  security_analysis.rs  terminal_startup.rs
openagent-terminal/docs/: configuration.md  security_lens.md
openagent-terminal/examples/: advanced_conversation_demo.rs  ai_terminal_demo.rs  blitzy_project_context_demo.rs  fintech-security-policy.toml  healthcare-security-policy.toml  natural_language_agent_demo.rs  openagent-terminal.example.toml  org-security-policy.toml  perf_cold_start.rs  perf_idle_memory.rs  perf_latency.rs  perf_wgpu.rs  privacy_content_filter_demo.rs  render_smoke.rs  session_persistence_demo.rs  snapshot_capture.rs  tab_bar_offscreen.rs  terminal_ui_integration_demo.rs  wgpu_snapshot.rs  workflow_orchestrator_demo.rs
openagent-terminal/res/: rect.f.glsl  rect.v.glsl  ui_rect.f.glsl  ui_rect.v.glsl
openagent-terminal/scripts/: enable_features.sh
openagent-terminal/src/: ai_context_provider.rs  ai_event_integration.rs  ai_runtime.rs  ai_runtime_memory_tests.rs  ai_terminal_integration.rs  block_sharing.rs  block_sharing_demo.rs  blocks_v2.rs  blocks_v2_old.rs  cli.rs  cli_ai.rs  cli_plugins.rs  cli_security.rs  cli_sync.rs  clipboard.rs  command_assistance.rs  command_history.rs  command_pipeline.rs  complete_integration_demo.rs  completions_spec.rs  components_init.rs  conversation_demo.rs  conversation_management.rs  daemon.rs  event.rs  ipc.rs  lib.rs  logging.rs  logging_v2.rs  main.rs  message_bar.rs  multiplexer.rs  native_input.rs  native_persistence.rs  native_renderer.rs  native_search.rs  panic.rs  plugins_api.rs  scheduler.rs  security_config.rs  (+11 more)
openagent-terminal/tests/: ai_cancellation.rs  ai_history_retention.rs  ai_integration_tests.rs  ai_provider_security.rs  ai_provider_switch_runtime.rs  ai_runtime_context.rs  ai_runtime_sanitization.rs  ai_stop_cancel.rs  ai_stream_error.rs  ai_stream_mid_cancel.rs  ai_stream_success.rs  blocks_header_chip_hit.rs  blocks_interactions.rs  blocks_utils.rs  command_pipeline_unit.rs  exit_indicator_tests.rs  gpu_snapshot.rs  integration_features.rs  integration_test.rs  keyboard_headless.rs  multipane_render_smoke.rs  pane_snapshot_hash.rs  pane_sync_tests.rs  perf_smoke.rs  plugins_manager.rs  render_smoke.rs  security_lens.rs  security_lens_sanity.rs  split_hit_testing.rs  tab_bar_interactions.rs  tab_manager_basic.rs  tab_manager_close_select.rs  ui_buffer_snapshots.rs  ui_confirm_multi_pending.rs  warp_tab_manager_basic.rs  wgpu_offscreen_snapshot.rs  workspace_directional_and_swap.rs
openagent-terminal/windows/: openagent-terminal.rc
plugins/dev-tools/: Cargo.toml  README.md
plugins/docker-helper/: Cargo.toml  README.md
plugins/git-context/: Cargo.toml  README.md
(+595 files in other folders)
