
[workspace]
members = [
    "openagent-terminal",
    "openagent-terminal-core",
    "openagent-terminal-config",
    "openagent-terminal-config-derive",
    "openagent-terminal-sync",
    "openagent-terminal-ai",
    # Plugin crates consolidated
    "crates/plugin-runtime",  # loader + system
    "crates/plugin-sdk",      # api + sdk (enhanced)
    "crates/workflow-engine",
    "plugins/git-context",
    "plugins/docker-helper",
    "plugins/dev-tools",
    # Utility crates consolidated into single crate
    "crates/openagent-terminal-utils",
    # IDE crates consolidated into single crate
    "crates/openagent-terminal-ide",
    # Note: web-editors functionality moved to openagent-terminal-ide
]
# Speed default builds by excluding plugin examples unless targeted
default-members = [
    "openagent-terminal",
    "openagent-terminal-core",
    "openagent-terminal-config",
    "openagent-terminal-config-derive",
    "openagent-terminal-sync",
    "openagent-terminal-ai",
    "crates/plugin-runtime",
    "crates/plugin-sdk",
    "crates/workflow-engine",
    "crates/openagent-terminal-utils",
    "crates/openagent-terminal-ide",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.79.0"
repository = "https://github.com/GeneticxCln/OpenAgent-Terminal"
license = "Apache-2.0 OR MIT"

[profile.release]
lto = "thin"
debug = 1
incremental = false
codegen-units = 1
panic = "unwind" # Keep unwind for better error reporting
overflow-checks = false

# Per-package overrides moved from plugin manifests
[profile.release.package."git-context"]
opt-level = "s"
debug = false

# Optimized release profile for maximum performance
[profile.release-optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false
debug = false
strip = "symbols"

# Development profile with better debugging
[profile.dev]
opt-level = 0
debug = true
incremental = true
debug-assertions = true
overflow-checks = true
panic = "unwind"

# Fast development profile for iteration
[profile.dev-fast]
inherits = "dev"
opt-level = 1
incremental = true
debug = 2
overflow-checks = false

# Testing profile optimized for CI/CD
[profile.test]
opt-level = 1
debug = 2
incremental = true
overflow-checks = true

# Security Lens development profile - optimized for fast iteration
[profile.security-lens-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = true
# Enable debug assertions for Security Lens testing
debug-assertions = true
overflow-checks = true

# Security Lens testing profile - optimized for test performance
[profile.security-lens-test]
inherits = "test"
opt-level = 2
debug = true
# Keep symbols for better debugging of Security Lens patterns
debug-assertions = true
overflow-checks = true

# Security Lens release profile - optimized for Security Lens performance
[profile.security-lens-release]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
# Optimize regex compilation for Security Lens patterns
opt-level = 3
overflow-checks = false
debug = false

# AI-optimized profile for AI feature builds
[profile.ai-optimized]
inherits = "release"
lto = "thin"
opt-level = 3
codegen-units = 1
# Keep some debug info for AI debugging
debug = 1
panic = "unwind"

# Benchmarking profile
[profile.bench]
inherits = "release"
lto = "fat"
opt-level = 3
codegen-units = 1
debug = false
incremental = false

# Profiling profile
[profile.profiling]
inherits = "release"
opt-level = 2
debug = true
lto = "thin"
codegen-units = 1
incremental = false

[workspace.dependencies]
# Dependency version overrides to resolve conflicts
base64 = "0.22.1"  # Override to use newer version consistently
rustix = "1.1.2"   # Use newer rustix across all crates
bitflags = "2.9.4" # Use newer bitflags to avoid conflicts
hashbrown = "0.16.0" # Consistent hashbrown version
futures = "0.3.31"  # Ensure consistent futures versions
regex = "1.11.2"    # Updated regex version
chrono = { version = "0.4.42", features = ["std", "serde"] }

# Core dependencies (always needed)
toml = "0.9.7"
toml_edit = "0.23.2"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"
# Web editor server stack
axum = "0.7"
hyper = { version = "1.4", features = ["http1", "http2", "server"] }
tokio-tungstenite = "0.24"
tungstenite = "0.21"
open = "5.3"
urlencoding = "2.1"
wry = "0.44"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"

# Rendering - WGPU
wgpu = "26.0"
raw-window-handle = "0.6"
winit = { version = "0.30.11", default-features = false, features = ["rwh_06"] }

# Text shaping and fonts (core requirement)
swash = "0.1"
harfbuzz_rs = "2.0"
fontdb = "0.23"
ttf-parser = "0.20"
unicode-bidi = "0.3"
ab-glyph = "0.2"

# Database
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# AI capabilities
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = "0.25"

# Plugin system
wasmtime = "37.0"
wasmtime-wasi = "37.0"
jsonrpc-core = "18.0"
jsonrpc-ipc-server = "18.0"

# Workflow system
tera = "1.20"
uuid = { version = "1.18", features = ["v4", "serde"] }

# UI components
egui = "0.29"
egui-winit = "0.29"
egui-wgpu = "0.29"
ratatui = "0.30"

# Performance monitoring
pprof = { version = "0.13", features = ["flamegraph"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
crossfont = "0.8.0"

# Synchronization
parking_lot = "0.12"
byteorder = "1.5.0"
futures-util = "0.3.31"
futures-channel = "0.3.31"
