[package]
name = "openagent-terminal"
version = "0.1.0"
edition = "2021"
authors = ["OpenAgent Team"]
description = "AI-native terminal emulator powered by OpenAgent and GPU-accelerated rendering"
license = "MIT"
repository = "https://github.com/yourusername/openagent-terminal"
keywords = ["terminal", "ai", "agent", "wgpu", "emulator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core window and rendering (from Portal) - Not used yet, gated behind 'gpu' feature
winit = { version = "0.28", optional = true }
wgpu = { version = "0.16", optional = true }
wgpu_glyph = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", optional = true }

# Terminal emulation (from Portal) - Not used yet, gated behind 'pty' feature
vte = { version = "0.10", optional = true }
portable-pty = { version = "0.8", optional = true }
tattoy-wezterm-term = { version = "0.1.0-fork.5", optional = true }

# Async runtime and IPC
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Terminal control and input handling
crossterm = "0.27"

# JSON-RPC and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "18.0"

# Unix socket support
async-net = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
serde_yaml = "0.9"
toml = "0.8"
dirs = "4.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Text processing
unicode-segmentation = "1.11"
unicode-width = "0.1"

# Syntax highlighting (for blocks) - Not used yet, gated behind 'highlight-advanced' feature
# Currently using simple ANSI-based highlighting
syntect = { version = "5.1", optional = true }

# Optional features
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
# Default features: Only what's actively used in Phase 1
default = ["cli"]

# GPU rendering (Phase 3+) - Portal-based GPU acceleration
gpu = ["dep:winit", "dep:wgpu", "dep:wgpu_glyph", "dep:pollster", "dep:bytemuck"]

# PTY support (Phase 2+) - Terminal emulation
pty = ["dep:vte", "dep:portable-pty", "dep:tattoy-wezterm-term"]

# Advanced syntax highlighting (Phase 3+) - Using syntect library
highlight-advanced = ["dep:syntect"]

# CLI argument parsing (future) - Not used yet
cli = ["dep:clap"]

# Full features (for future development)
full = ["gpu", "pty", "highlight-advanced", "cli"]

[[bin]]
name = "openagent-terminal"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
