[package]
name = "openagent-terminal-ai"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0"
description = "Optional AI interfaces for OpenAgent Terminal (privacy-first, opt-in)"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Individual provider features - use these for specific AI backend support
ai-ollama = ["serde", "serde_json", "reqwest", "tokio"]
ai-openai = ["serde", "serde_json", "reqwest", "tokio", "futures-util", "eventsource-stream"]
ai-anthropic = ["serde", "serde_json", "reqwest", "tokio", "futures-util", "eventsource-stream"]
# Internal feature to build examples; disabled by default
examples = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }
futures-util = { version = "0.3", optional = true }
eventsource-stream = { version = "0.2", optional = true }
tracing = "0.1"
regex = "1"
rand = "0.8"

[dev-dependencies]
httpmock = "0.7"

# Ensure examples only build when explicitly requested via --features examples
[[example]]
name = "async_streaming_example"
path = "examples/async_streaming_example.rs"
required-features = ["examples"]
