[package]
name = "openagent-terminal-ai"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0"
description = "Optional AI interfaces for OpenAgent Terminal (privacy-first, opt-in)"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Individual provider features - use these for specific AI backend support
ai-ollama = ["serde", "serde_json", "reqwest", "tokio", "futures-util"]
ai-openai = ["serde", "serde_json", "reqwest", "tokio", "futures-util", "eventsource-stream"]
ai-anthropic = ["serde", "serde_json", "reqwest", "tokio", "futures-util", "eventsource-stream"]
ai-openrouter = ["serde", "serde_json", "reqwest", "tokio", "futures-util", "eventsource-stream"]
# Enhanced multi-agent system for Blitzy Platform integration
agents = ["serde", "serde_json", "tokio", "futures-util", "async-trait"]
# Internal feature to build examples; disabled by default
examples = []
[dependencies]
httpdate = "1.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
reqwest = { workspace = true, optional = true }
tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }
futures-util = { version = "0.3", optional = true }
eventsource-stream = { version = "0.2", optional = true }
tracing = "0.1"
regex = "1"
lazy_static = "1"
rand = "0.8"
anyhow = "1.0"
ignore = "0.4"
git2 = "0.18"
pathdiff = "0.2"
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
wiremock = "0.6"
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
proptest = "1.0"
insta = "1.34"

# Ensure examples only build when explicitly requested via --features examples
[[example]]
name = "async_streaming_example"
path = "examples/async_streaming_example.rs"
required-features = ["examples"]
