[package]
name = "openagent-terminal-config"
version = "0.2.3-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "Apache-2.0 OR MIT"
description = "OpenAgent Terminal configuration abstractions (Alacritty-derived)"
homepage = "https://github.com/GeneticxCln/OpenAgent-Terminal"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
serde = "1.0.163"
toml.workspace = true

[dev-dependencies]
openagent-terminal-config-derive = { version = "0.2.5-dev", path = "../openagent-terminal-config-derive" }
serde = { version = "1.0.163", features = ["derive"] }
