[package]
name = "openagent-terminal-core"
version = "0.25.1-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0 OR MIT"
description = "Alacritty-derived terminal core used by OpenAgent Terminal"
readme = "../README.md"
homepage = "https://github.com/GeneticxCln/OpenAgent-Terminal"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "bitflags/serde", "vte/serde"]

[dependencies]
base64 = { workspace = true }
bitflags = { workspace = true }
home = "0.5.5"
libc = "0.2"
tracing = { workspace = true }
parking_lot = "0.12.0"
polling = "3.8.0"
regex-automata = "0.4.3"
unicode-width = "0.2.0"
vte = { version = "0.15.0", default-features = false, features = ["std", "ansi"] }
serde = { version = "1", features = ["derive", "rc"], optional = true }
log = "0.4"
thiserror = { workspace = true }
tokio-util = "0.7"
tokio = { workspace = true, features = ["time", "sync", "macros"] }

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2.0"
rustix = { version = "1.1.2", default-features = false, features = ["std"] }
signal-hook = "0.3.10"

[target.'cfg(windows)'.dependencies]
piper = "0.2.1"
miow = "0.6.1"
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
serde_json = "1.0.0"
proptest = "1.4"
