[package]
name = "openagent-terminal"
version = "0.16.1"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0 OR MIT"
description = "AI-enhanced, cross-platform terminal emulator with built-in command assistance; fast GPU rendering (WGPU), privacy-first, optional local/cloud AI providers."
readme = "README.md"
homepage = "https://github.com/GeneticxCln/OpenAgent-Terminal"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
autoexamples = false

[[bin]]
name = "openagent-terminal"
path = "src/main.rs"


[dependencies.openagent-terminal-core]
path = "../openagent-terminal-core"
version = "0.25.1-dev"

[dependencies.openagent-terminal-config-derive]
path = "../openagent-terminal-config-derive"
version = "0.2.5-dev"

[dependencies.openagent-terminal-config]
path = "../openagent-terminal-config"
version = "0.2.3-dev"

[dependencies.openagent-terminal-sync]
path = "../openagent-terminal-sync"
version = "0.1.0"
optional = true

[dependencies.openagent-terminal-ai]
path = "../openagent-terminal-ai"
version = "0.1.0"
optional = true

[dependencies.workflow-engine]
path = "../crates/workflow-engine"
version = "0.1.0"
optional = true

[dependencies.plugin-api]
path = "../crates/plugin-api"
version = "0.1.0"
optional = true

[dependencies.plugin-loader]
path = "../crates/plugin-loader"
version = "0.1.0"
optional = true


[dependencies]
ahash = { version = "0.8.6", features = ["no-rng"] }
wat = "1.238.1"
bitflags = "2.2.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
copypasta = { version = "0.10.1", default-features = false }
crossfont = { workspace = true }
tracing = { workspace = true }
# WGPU renderer
wgpu = { version = "26.0", optional = true }
# WGPU utilities
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["derive"] }
# Text shaping dependencies
harfbuzz_rs = { workspace = true, optional = true }
fontdb = { workspace = true, optional = true }
# Component management
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
dirs = "6.0.0"
once_cell = "1.19"
# Blocks v2 dependencies
chrono = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
sqlx = { workspace = true, optional = true }
# Text shaping additional dependencies
unicode-bidi = { workspace = true, optional = true }

home = "0.5.5"
libc = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
notify = "8.0.0"
parking_lot = "0.12.0"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
sha2 = "0.10"
bincode = "1"
tempfile = "3.12.0"
thiserror = { workspace = true }
toml.workspace = true
toml_edit.workspace = true
unicode-width = "0.2.0"
winit = { workspace = true, features = ["serde"] }
# Optional SQLite for AI history (best-effort logging)
rusqlite = { workspace = true }
csv = "1.3"
# Observability
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
# Optional at-rest log encryption
aes-gcm = { version = "0.10", features = ["aes"] }
aes = "0.8"
rand_core = "0.6"
base64 = "0.22"
rand = "0.9"


[build-dependencies]
chrono = "0.4"


[dev-dependencies]
clap_complete = "4.2.3"
image = "0.24"
chrono = { version = "0.4" }
sha2 = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }
# Ensure examples/tests can directly depend on wgpu APIs regardless of optional feature plumbing
wgpu = "26.0"
pollster = "0.3"
proptest = "1.4"
serial_test = "2"
insta = "1.34"

[target.'cfg(not(windows))'.dependencies]
xdg = "3.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
png = { version = "0.17.5", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSString",
    "NSLocale",
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[target.'cfg(windows)'.dependencies]
dirs = "6.0.0"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
# WGPU-only default. No OpenGL backend.
# Cloud sync and account features are excluded by default in this open-source project.
# Optional local/self-hosted sync remains available behind the `sync` feature flag.
default = ["wayland", "x11", "blocks", "workflow", "wgpu", "completions", "security-lens"]
# Convenience alias for a comprehensive local dev build (no provider-specific AI by default)
full = ["wgpu", "workflow", "completions", "harfbuzz", "blocks", "plugins", "security-lens-full"]
# Preview-only UI helpers used by examples/demos
preview_ui = []
# Experimental placeholders/scaffolding that is planned but not yet actively used
experimental = []
# Optional background component initialization in a separate task
background-components = []
# WGPU rendering backend
wgpu = ["dep:wgpu", "dep:pollster"]
# Convenience preset: enable experimental WGPU backend with one flag (alias)
renderer-wgpu = ["wgpu"]
# Experimental always-on completions overlay (gated until stable)
completions = []
# IDE features

x11 = [
    "copypasta/x11",
    "winit/x11",
    "png",
]
wayland = [
    "copypasta/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-crossfont",
]
nightly = []
# Optional AI integration for command assistance
ai = [
    "dep:openagent-terminal-ai",
    # Forward provider features so the providers module is available
    "openagent-terminal-ai/ai-openai",
    "openagent-terminal-ai/ai-anthropic",
    "openagent-terminal-ai/ai-ollama",
    "openagent-terminal-ai/ai-openrouter",
]
# Optional sync feature for settings/history sync
sync = ["dep:openagent-terminal-sync"]
# Optional workflow engine for automated task execution
workflow = ["dep:workflow-engine"]
# Optional plugin system (plugin-loader temporarily disabled)
plugins = ["dep:plugin-api", "dep:plugin-loader"]
# Enhanced text shaping with HarfBuzz
harfbuzz = ["dep:harfbuzz_rs", "dep:fontdb", "dep:unicode-bidi"]
# Blocks 2.0 system for command execution tracking
blocks = ["dep:chrono", "dep:uuid", "dep:sqlx"]

# Security Lens feature gates
# Core security analysis (pattern matching, risk assessment)
security-lens = []
# Extended security patterns (cloud, containers, databases)
security-lens-extended = ["security-lens"]
# Platform-specific security patterns (Linux, macOS, Windows)
security-lens-platform = ["security-lens"]
# Security Lens rate limiting and advanced features
security-lens-advanced = ["security-lens", "dep:chrono"]
# Complete Security Lens suite (all features)
security-lens-full = ["security-lens", "security-lens-extended", "security-lens-platform", "security-lens-advanced"]
# Security Lens development tools and enhanced testing
security-lens-dev = ["security-lens-full"]

# Umbrella features for AI backends (one-flag builds)
# Example: cargo build -p openagent-terminal --features ai-ollama
ai-ollama = ["ai", "openagent-terminal-ai/ai-ollama"]
ai-openai = ["ai", "openagent-terminal-ai/ai-openai"]
ai-anthropic = ["ai", "openagent-terminal-ai/ai-anthropic"]
ai-openrouter = ["ai", "openagent-terminal-ai/ai-openrouter"]
# Experimental native modules (input, renderer, search, persistence)
# Disabled by default until stabilized
native-extras = []

[package.metadata.msix]
# Minimal MSIX metadata for unsigned packaging in CI
identity_name = "OpenAgent.Terminal"
publisher = "CN=OpenAgent"
msix_version = "1.0.0.0"
display_name = "OpenAgent Terminal"
description = "AI-enhanced, cross-platform terminal"
logo_path = "extra/logo/openagent-terminal.png"
# Keep capability surface minimal
capabilities = ["internetClient"]

[[example]]
name = "snapshot_capture"
path = "examples/snapshot_capture.rs"
required-features = ["preview_ui"]

[[example]]
name = "perf_cold_start"
path = "examples/perf_cold_start.rs"
required-features = ["wgpu"]

[[example]]
name = "perf_latency"
path = "examples/perf_latency.rs"
required-features = ["wgpu"]

[[example]]
name = "perf_wgpu"
path = "examples/perf_wgpu.rs"
required-features = ["wgpu"]

[[example]]
name = "render_smoke"
path = "examples/render_smoke.rs"

[[example]]
name = "wgpu_snapshot"
path = "examples/wgpu_snapshot.rs"
required-features = ["wgpu"]

[[example]]
name = "natural_language_agent_demo"
path = "examples/natural_language_agent_demo.rs"
required-features = ["ai"]

[[example]]
name = "blitzy_project_context_demo"
path = "examples/blitzy_project_context_demo.rs"
required-features = ["ai"]

[[example]]
name = "workflow_orchestrator_demo"
path = "examples/workflow_orchestrator_demo.rs"
required-features = ["ai"]

[[example]]
name = "advanced_conversation_demo"
path = "examples/advanced_conversation_demo.rs"
required-features = ["ai"]

[[example]]
name = "privacy_content_filter_demo"
path = "examples/privacy_content_filter_demo.rs"
required-features = ["ai"]

[[example]]
name = "terminal_ui_integration_demo"
path = "examples/terminal_ui_integration_demo.rs"
required-features = ["ai"]

[[bench]]
name = "terminal_startup"
harness = false

[[bench]]
name = "render_performance"
harness = false

[[bench]]
name = "security_analysis"
harness = false

[[bench]]
name = "compliance_report"
harness = false
